# OpenQ4

./: .gitattributes  .gitignore  AGENTS.md  BUILDING.md  README.md  TECHNICAL.md  TODO.md  meson.build  meson_options.txt
content/baseoq4/: default.cfg  meson.build  mod.json.in
content/baseoq4/botfiles/: items.c
content/baseoq4/botfiles/bots/: default_c.c  major_c.c  major_i.c
content/baseoq4/env/maps/game/airdefense1/: area10_lightgrid_amb.tga  area10_lightgrid_pos.tga  area11_lightgrid_amb.tga  area12_lightgrid_amb.tga  area12_lightgrid_pos.tga  area12_lightgrid_vis.tga  area13_lightgrid_amb.tga  area14_lightgrid_amb.tga  area14_lightgrid_pos.tga  area15_lightgrid_pos.tga  area16_lightgrid_amb.tga  area17_lightgrid_amb.tga  area18_lightgrid_vis.tga  area19_lightgrid_vis.tga  area1_lightgrid_pos.tga  area20_lightgrid_amb.tga  area20_lightgrid_pos.tga  area20_lightgrid_vis.tga  area21_lightgrid_amb.tga  area22_lightgrid_amb.tga  area22_lightgrid_vis.tga  area23_lightgrid_amb.tga  area23_lightgrid_vis.tga  area25_lightgrid_amb.tga  (+45 more)
content/baseoq4/gfx/guis/loadscreens/: airdefense_left.dds  airdefense_right.dds  airdefense_top.dds  convoy1.dds  convoy1_top.dds  e3_load.dds  e3_load_left.dds  generic_right.dds  generic_top.dds  hangar1.dds  hangar1_right.dds  hangar1_top.dds  hangar2_left.dds  mcc_landing_bottom.dds  mcc_landing_left.dds  mcc_landing_right.dds  mcc_landing_top.dds  mcc_left.dds  mcc_top.dds  q4cmp14_right.dds  q4cmp15.dds  q4cmp15_left.dds  q4cmp2.dds  q4cmp2_bottom.dds  q4cmp2_left.dds  q4cmp2_right.dds  q4cmp2_top.dds  q4cmp3.dds  q4cmp3_bottom.dds  q4cmp3_left.dds  q4cmp3_right.dds  q4cmp3_top.dds  q4dm10_bottom.dds  q4dm10_left.dds  q4dm10_top.dds  q4dm11.dds  q4dm11_left.dds  q4dm11_top.dds  q4dm11v1.dds  q4dm11v1_bottom.dds  (+25 more)
content/baseoq4/glprogs/: lensflare.fs  material_interaction.fs  motionblur.fs  motionvectors.vs  rvspecial_depth.fs  shadow_interaction.fs  shadow_interaction.vs  shadow_point_caster.fs  shadow_point_interaction.vs  shadow_proj_translucent_caster.fs
content/baseoq4/guis/: cinematic.gui  gameover.gui  mainmenu.gui  mphud.gui  mpmain.gui
content/baseoq4/guis/loading/: generic.gui  mplevel.gui
content/baseoq4/guis/menu/settings/: game.gui  game_hovers.gui  system.gui
content/baseoq4/guis/vehicles/: strogg_noise.gui
content/baseoq4/guis/weapons/: nailgun_scope.gui  railgun_scope.gui
content/baseoq4/maps/game/: airdefense1.lightgrid
content/baseoq4/maps/mp/: q4dm1.lightgrid  q4dm10.lightgrid  q4dm11.lightgrid  q4dm11v1.lightgrid  q4dm11v1.lightgridpack  q4dm2.lightgrid  q4dm3.lightgrid  q4dm4.lightgrid  q4dm5.lightgrid  q4dm6.lightgrid  q4dm7.lightgrid  q4dm8.lightgrid  q4dm8.lightgridpack  q4dm9.lightgrid
content/baseoq4/materials/: hud_openq4.mtr  weaponwheel_openq4.mtr
content/baseoq4/pak0/: default.cfg  openq4_profile_steamdeck.cfg
content/baseoq4/pak0/botfiles/: weapons.c
content/baseoq4/pak0/botfiles/bots/: major_w.c
content/baseoq4/pak0/def/weapons/: 00_napalmgun_openq4.def
content/baseoq4/pak0/glprogs/: bloom_blur.fs  bloom_downsample.fs  blur.fs  crt.fs  lensflare.fs  lensflare.vs  material_interaction.fs  material_interaction.vs  motionvectors.fs  rvspecial_al.fs  rvspecial_al.vs  rvspecial_blur.fs  rvspecial_medlabs.fs  shadow_interaction.fs  shadow_interaction.vs  shadow_point_caster.fs  shadow_point_caster.vs  shadow_point_interaction.vs  shadow_point_translucent_caster.fs  shadow_proj_caster.fs  shadow_proj_translucent_caster.vs  smaa_blend.fs  smaa_edge.fs  smaa_edge.vs  smaa_weights.fs  ssao.fs
content/baseoq4/pak0/glprogs/glsl/: sniperstretch2.glslvp
content/baseoq4/pak0/guis/: buymenu.gui  hud.gui  hud_strogg.gui  mainmenu.gui  mphud.gui  mpmsgmode.gui
content/baseoq4/pak0/guis/loading/: generic.gui  intro.gui
content/baseoq4/pak0/guis/vehicles/: airdef_cannon.gui  hud.gui  strogg_noise.gui
content/baseoq4/pak0/guis/weapons/: nailgun_scope.gui  railgun_scope.gui
content/baseoq4/pak0/materials/: hardwareshaders_openq4.mtr  postprocess_openq4.mtr
content/baseoq4/pak0/strings/: english_guis.lang  english_openq4.lang  french_openq4.lang  italian_openq4.lang  spanish_guis.lang  spanish_openq4.lang
content/baseoq4/pak1/maps/game/: airdefense2.lightgrid  waste.lightgrid
content/baseoq4/pak1/maps/mp/: q4cmp0.lightgrid  q4cmp1.lightgrid  q4cmp10.lightgrid  q4cmp11.lightgrid  q4cmp12.lightgrid  q4cmp13.lightgrid  q4cmp14.lightgrid  q4cmp15.lightgrid  q4cmp2.lightgrid  q4cmp3.lightgrid  q4cmp3.lightgridpack  q4cmp4.lightgrid  q4cmp5.lightgrid  q4cmp6.lightgrid  q4cmp7.lightgrid  q4cmp8.lightgrid  q4cmp9.lightgrid  q4ctf1.lightgrid  q4ctf2.lightgrid  q4ctf3.lightgrid  q4ctf4.lightgrid  q4ctf5.lightgrid  q4ctf5.lightgridpack  q4ctf6.lightgrid  q4ctf7.lightgrid  q4ctf8.lightgrid  q4dm1.lightgrid  q4dm11.lightgrid  q4dm3.lightgrid  q4dm6.lightgrid  q4dm8.lightgrid  q4dm8.lightgridpack  q4dz1.lightgrid  q4dz2.lightgrid  q4dz3.lightgrid  q4dz4.lightgrid  q4tourney1.lightgrid  q4xctf6.lightgrid  q4xdm10.lightgrid  q4xdm11.lightgrid  (+5 more)
content/baseoq4/pak1/scripts/maps/: convoy2b.script  storage1.script
content/baseoq4/strings/: english_code.lang  english_openq4.lang  french_guis.lang  french_openq4.lang  italian_openq4.lang  spanish_openq4.lang
openq4/: meson.build  openq4_defaults.cfg  openq4_profile_steamdeck.cfg
openq4/gfx/guis/hud/reticles/: mgun_scope_distort_top.tga
openq4/gfx/guis/hud/weaponwheel/: wedge_missing.tga
openq4/glprogs/: openq4_shadow_interaction.fs  openq4_shadow_interaction.vs  openq4_shadow_point_interaction.fs  openq4_shadow_proj_translucent_caster.fs  openq4_shadow_proj_translucent_caster.vs
openq4/glprogs/glsl/: sniperstretch2.glslfp
openq4/guis/: mainmenu.gui
openq4/materials/: postprocess_openq4.mtr
openq4/strings/: english_openq4.lang  french_openq4.lang  italian_openq4.lang  spanish_openq4.lang
subprojects/glew/: meson.build
subprojects/glew/src/: glew.c
subprojects/packagefiles/sdl3/: meson.build  meson_options.txt
subprojects/packagefiles/sdl3/src/hidapi/: meson.build
subprojects/packagefiles/sdl3/src/video/: meson.build
(+7851 files in other folders)
